# DjangoProject

./: .env.sample  README.md  catalog_fixture.json  pyproject.toml
blogging/: admin.py  forms.py  models.py  urls.py  views.py
blogging/migrations/: 0001_initial.py  0002_alter_blog_options_alter_blog_views_count.py
blogging/templates/blogging/: add_blog.html  base.html  blog_confirm_delete.html  blog_detail.html  blogs.html  menu.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_data_by_fixture.py  add_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/: add_product.html  base.html  contacts.html  home.html  menu.html  product_detail.html
config/: settings.py  urls.py
